Tasks: Fix load completed tasks button being cut off. Fixes #2140

--- a/css/apps/official/_tasks.scss
+++ b/css/apps/official/_tasks.scss
@@ -39,7 +39,8 @@
         }
     }
 
-    .task-list .loadmore span {
+    .task-list .loadmore span,
+    .task-list .loadmore button {
         background-color: var(--color-background-darker) !important;
         color: var(--color-text-maxcontrast) !important;
     }
